# mcp-kagi-search

./: README.md  flake.nix  pyproject.toml
src/mcp_kagi_search/: __init__.py  __main__.py  server.py
